--- a/index.html
+++ b/index.html
@@ -257,73 +257,184 @@
        </a>
     </div>
     <div class="section4__inner__right">
-     <div class="gamer">
-       <div class="gamer__inner">
-         <div>
-           <img src="./image/human1.svg" alt="gamer" height="65" width="65">
+       <div class="gamer">
+         <div class="gamer__inner">
+           <div class="wrapper">
+             <div>
+               <img src="./image/human1.svg" alt="gamer" height="75" width="75">
+             </div>
+             <div>
+               <h4>
+                Evan Lahti
+               </h4>
+               <p>
+                PC Gamer
+               </p>
+             </div>
+           </div>
+           <div>
+             <a href="#">
+               <img src="./image/twitter.svg" alt="rasm" height="18" width="15">
+             </a>
+           </div>
          </div>
-         <div>
-           <h4>
-            Evan Lahti
-           </h4>
+         <div class="game__inner__bottom">
            <p>
-            PC Gamer
-           </p>
+             “One of my gaming highlights of the year.”
+            </p>
+           <time>
+            October 18, 2018
+           </time>
          </div>
        </div>
-       <div class="game__inner__bottom">
-         <p>
-           “One of my gaming highlights of the year.”
-          </p>
-         <time>
-          October 18, 2018
-         </time>
-       </div>
-       <div class="gamer__inner">
-         <div>
-           <img src="./image/human2.svg" alt="gamer" height="65" width="65">
-         </div>
-         <div>
-           <h4>
-            Jada Griffin
-           </h4>
-           <p>
-            Nerdreactor
-           </p>
-         </div>
-       </div>
-       <div class="game__inner__bottom">
-         <p>
-           “The next big thing in the world of streaming and survival games.”
-         </p>
-         <time>
-           December 21, 2018
-         </time>
-       </div>
-       <div class="gamer__inner">
-         <div>
-           <img src="./image/human3.svg" alt="gamer" height="65" width="65">
-         </div>
-         <div>
-           <h4>
+       <div class="gamer">
+         <div class="gamer__inner">
+           <div class="wrapper">
+             <div>
+               <img src="./image/human2.svg" alt="gamer" height="75" width="75">
+             </div>
 
-           </h4>
+              <div>
+                <h4>
+                Jada Griffin
+               </h4>
+               <p>
+                Nerdreactor
+               </p>
+             </div>
+           </div>
+           <div>
+             <a href="#">
+               <img src="./image/twitter.svg" alt="rasm" height="18" width="15">
+             </a>
+           </div>
+         </div>
+         <div class="game__inner__bottom">
            <p>
-
+             “The next big thing in the world of streaming <br> and survival games.”
            </p>
+           <time>
+             December 21, 2018
+           </time>
          </div>
        </div>
-       <div class="game__inner__bottom">
-         <p>
-           “Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is Ridiculous.”
-         </p>
-         <time>
-           December 24, 2018
-         </time>
+       <div class="gamer">
+         <div class="gamer__inner">
+           <div class="wrapper">
+             <div>
+               <img src="./image/human3.svg" alt="gamer" height="75" width="75">
+             </div>
+             <div>
+               <h4>
+                Aaron Williams
+               </h4>
+               <p>
+                Uproxx
+               </p>
+             </div>
+           </div>
+           <div>
+             <a href="#">
+               <img src="./image/twitter.svg" alt="rasm" height="18" width="15">
+             </a>
+           </div>
+         </div>
+         <div class="game__inner__bottom">
+           <p>
+             “Snoop Dogg Playing The Wildly Entertaining <br> ‘SOS’ Is Ridiculous.”
+           </p>
+           <time>
+             December 24, 2018
+           </time>
+         </div>
        </div>
      </div> <!-- End of gamer -->
     </div> <!-- End of section4__inner__right -->
   </div><!-- End of section4__inner -->
 </div> <!-- End of section4 -->
+<div class="section5">
+   <div class="section5__inner container">
+     <div class="section5__inner__left">
+       <img src="./image/image.png" alt="rasm" height="655" width="412">
+     </div>
+     <div class="section5__inner__right">
+      <h4>
+        Want to stay in touch?
+      </h4>
+      <h2>
+        newsletter SUBSCRIBE
+      </h2>
+      <p>
+        In order to start receiving our news, all you have to do is enter your email <br> address. Everything else will be
+        taken care of by us. We will send you emails  <br> containing information about game. We don’t spam.
+      </p>
+      <form class="form" action="https://echo.htmlacademy.ru" method="GET">
+        <div class="input__wrapper">
+          <span class="form__span">
+            Your email address
+          </span>
+        <input type="email" placeholder="aliciliniavopir@gmail.com">
+      </div>
+      <button class="btn" type="submit">
+        Subscribe now
+      </button>
+      </form>
+     </div>
+   </div> <!-- End of section5__inner -->
+   <footer class="container footer">
+     <div class="footer__top">
+       <div class="image__wrapper">
+         <a class="link" href="#"><img src="./image/logo2.svg" alt="logo" height="60" width="60"></a>
+      </div>
+       <div class="second__div">
+         <a href="#">
+          MAIN
+         </a>
+         <a href="#">
+          about
+         </a>
+         <a href="#">
+          game features
+         </a>
+         <a href="#">
+          System requirements
+         </a>
+         <a href="#">
+          quotes
+         </a>
+       </div>
+       <div id="third">
+          <a href="#">
+            <img src="./image/facebook.svg" alt="picture" height="20" width="20">
+          </a>
+          <a href="#">
+            <img src="./image/twitter.svg" alt="picture" height="20" width="20">
+          </a>
+          <a href="#">
+            <img src="./image/youtube.svg" alt="picture" height="20" width="20">
+          </a>
+          <a href="#">
+            <img src="./image/twitch.svg" alt="picture" height="20" width="20">
+          </a>
+       </div>
+     </div>
+     <div class="footer__bottom">
+       <div>
+         © 2018 Outpost Games, Inc. All Rights Reserved
+       </div>
+       <div>
+         <a href="#">
+          Privacy Policy
+         </a>
+         <a href="#">
+          Terms of Services
+         </a>
+         <a href="#">
+          Code of Conduct
+         </a>
+       </div>
+     </div>
+   </footer>
+</div> <!-- End of section5 -->
 </body>
 </html>
